crates/apollo-compiler/test_data/diagnostics/0075_merge_conflicting_args.txt
Error: operation must not provide conflicting field arguments for the same name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:47:3]
    │
 46 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── `Dog.doesKnowCommand(dogCommand:)` is used with one argument value here
 47 │   doesKnowCommand(dogCommand: HEEL)
    │   ────────────────┬────────────────  
    │                   ╰────────────────── but a different value here
    │ 
    │ Help: The same name cannot be selected multiple times with different arguments, because it's not clear which set of arguments should be used to fill the response. If you intend to use diverging arguments, consider adding an alias to differentiate
────╯
Error: operation must not provide conflicting field arguments for the same name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:52:3]
    │
 51 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── `Dog.doesKnowCommand(dogCommand:)` is used with one argument value here
 52 │   doesKnowCommand(dogCommand: $dogCommand)
    │   ────────────────────┬───────────────────  
    │                       ╰───────────────────── but a different value here
    │ 
    │ Help: The same name cannot be selected multiple times with different arguments, because it's not clear which set of arguments should be used to fill the response. If you intend to use diverging arguments, consider adding an alias to differentiate
────╯
Error: operation must not provide conflicting field arguments for the same name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:57:3]
    │
 56 │   doesKnowCommand(dogCommand: $varOne)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── `Dog.doesKnowCommand(dogCommand:)` is used with one argument value here
 57 │   doesKnowCommand(dogCommand: $varTwo)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── but a different value here
    │ 
    │ Help: The same name cannot be selected multiple times with different arguments, because it's not clear which set of arguments should be used to fill the response. If you intend to use diverging arguments, consider adding an alias to differentiate
────╯
Error: operation must not provide conflicting field arguments for the same name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:62:3]
    │
 61 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── `doesKnowCommand` is selected with argument `dogCommand` here
 62 │   doesKnowCommand
    │   ───────┬───────  
    │          ╰───────── but argument `dogCommand` is not provided here
    │ 
    │ Help: The same name cannot be selected multiple times with different arguments, because it's not clear which set of arguments should be used to fill the response. If you intend to use diverging arguments, consider adding an alias to differentiate
────╯
Error: operation must not provide conflicting field arguments for the same name `isAtLocation`
    ╭─[0075_merge_conflicting_args.graphql:67:3]
    │
 66 │   isAtLocation(x: 0)
    │   ─────────┬────────  
    │            ╰────────── `isAtLocation` is selected with argument `x` here
 67 │   isAtLocation(y: 0)
    │   ─────────┬────────  
    │            ╰────────── but argument `x` is not provided here
    │ 
    │ Help: The same name cannot be selected multiple times with different arguments, because it's not clear which set of arguments should be used to fill the response. If you intend to use diverging arguments, consider adding an alias to differentiate
────╯

